--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/postgres
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=true
 #drop and create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 #Logger
 spring.output.ansi.enabled=always
 logging.level.root=info
