--- a/.github/workflows/backend.pipeline.yml
+++ b/.github/workflows/backend.pipeline.yml
@@ -11,6 +11,7 @@ jobs:
       postgres:
         image: postgres
         env:
+          POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
         ports: 
           - 5432:5432
