--- a/.github/workflows/backend.pipeline.yml
+++ b/.github/workflows/backend.pipeline.yml
@@ -34,7 +34,7 @@ jobs:
   build-and-push-backend:
     name: build tagged docker version
     runs-on: ubuntu-latest
-    needs: [test-backend-gradleTests, test-backend-postman]
+    needs: [test-backend-gradleTests]
     steps:
       - uses: actions/checkout@v3
       - name: Login to Docker Hub
