--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -99,9 +99,9 @@ jobs:
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          password: ${{ secrets.SSH_PASSWORD }}
+          host: 10.1.31.12
+          username: ubuntu
+          password: 0mPerb17Eswvs40rLCJp
           port: 22
           script: |
             docker pull asuzas/docker-m347-backend
