--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -89,9 +89,9 @@ jobs:
       - name: copying remote shell script using password
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          password: ${{ secrets.SSH_PASSWORD }}
+          host: 10.1.31.12
+          username: ubuntu
+          password: 0mPerb17Eswvs40rLCJp
           port: 22
           source: ./docker-compose.yml
           target: .
