--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     container_name: docker-m347-backend
     ports:
       - 8080:8080
+    expose:
+    - 8080
     environment:
       - DB_HOST=db
     depends_on:
@@ -26,6 +28,8 @@ services:
     restart: always
     image: 'postgres:10-alpine'
     container_name: db_m347_Bollin
+    expose:
+    - 5432
     environment:
       POSTGRES_PASSWORD: 'postgres'
       POSTGRES_USER: 'postgres'
