--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   frontend:
     restart: always
-    image: asuzas/docker-m347-frontend
+    image: asuzas/docker-m347-frontend:latest
     container_name: docker-m347-frontend
     env_file: .env
     depends_on:
@@ -13,7 +13,7 @@ services:
 
   backend:
     restart: always
-    image: asuzas/docker-m347-backend
+    image: asuzas/docker-m347-backend:latest
     container_name: docker-m347-backend
     ports:
       - 8080:8080
