--- a/backend-service.yaml
+++ b/backend-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
+    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
     kompose.version: 1.28.0 (c4137012e)
   creationTimestamp: null
   labels:
@@ -11,9 +11,6 @@ metadata:
 spec:
   ports:
     - name: "8080"
-      port: 8080
-      targetPort: 8080
-    - name: 8080-tcp
       port: 8080
       targetPort: 8080
   selector:
