--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -95,19 +95,6 @@ jobs:
           allowed_ips: '${{ secrets.VPN_ALLOWED_IPS }}'
           private_key: '${{ secrets.VPN_PRIVATE_KEY }}'
 
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          port: 22
-          script: |
-            cd yaml
-            docker pull asuzas/docker-m347-backend
-            docker pull asuzas/docker-m347-frontend
-            docker-compose up -d
-
       - name: copying remote shell script using password
         uses: appleboy/scp-action@master
         with:
@@ -117,3 +104,16 @@ jobs:
           port: 22
           source: .
           target: ./gitHubRepo
+
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: 22
+          script: |
+            cd ./gitHubRepo/yaml
+            docker pull asuzas/docker-m347-backend
+            docker pull asuzas/docker-m347-frontend
+            docker-compose up -d
