--- a/yaml/env-configmap.yaml
+++ b/yaml/env-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  REACT_APP_BASEURL: http://localhost:8080/
+  REACT_APP_BASEURL: http://10.1.31.12/api/
   REACT_APP_LANGUAGE: de
   SKIP_PREFLIGHT_CHECK: "true"
 kind: ConfigMap
