--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,21 @@ on:
   push
 
 jobs:
+  next-version-autoincrement:
+    name: Auto Version Increase
+    runs-on: ubuntu-latest
+    steps:
+      - name: Auto Increment Semver Action
+        uses: MCKanpolat/auto-semver-action@1.0.5
+        id: versioning
+        with:
+          releaseType: patch 
+          incrementPerCommit: false
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Next Release Number
+        run: echo ${{ steps.versioning.outputs.version }}
+
   test-backend-gradleTests:
     name: Backend Gradle Tests
     runs-on: ubuntu-latest
@@ -34,7 +49,7 @@ jobs:
   build-and-push-backend:
     name: build tagged docker version
     runs-on: ubuntu-latest
-    needs: [test-backend-gradleTests]
+    needs: [test-backend-gradleTests, next-version-autoincrement]
     steps:
       - uses: actions/checkout@v3
       - name: Login to Docker Hub
@@ -52,10 +67,13 @@ jobs:
           push: true
           tags: 
             ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:${{ github.sha }},
-            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:latest
+            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:latest,
+            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:${{ steps.versioning.outputs.version }}
+
   build-and-push-frontend:
     name: build tagged docker version
     runs-on: ubuntu-latest
+    needs: [next-version-autoincrement]
     steps:
       - uses: actions/checkout@v3
       - name: Login to Docker Hub
@@ -73,7 +91,8 @@ jobs:
           push: true
           tags: 
             ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:${{ github.sha }},
-            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:latest
+            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:latest,
+            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:{{ steps.versioning.outputs.version }}
 
   restart-server-docker:
     name: Restart server docker compose
@@ -95,7 +114,7 @@ jobs:
           allowed_ips: '${{ secrets.VPN_ALLOWED_IPS }}'
           private_key: '${{ secrets.VPN_PRIVATE_KEY }}'
 
-      - name: copying remote shell script using password
+      - name: copying GitHub using password
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -117,3 +136,5 @@ jobs:
             docker pull asuzas/docker-m347-backend
             docker pull asuzas/docker-m347-frontend
             docker-compose up -d
+            kompose convert -f docker-compose.yml --out k8s-kompose.yaml
+            kubectl apply -f k8s-kompose.yaml
