--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Next Release Number
         run: echo ${{ steps.versioning.outputs.version }}
+    outputs:
+      version: ${{ steps.versioning.outputs.version }}
 
   test-backend-gradleTests:
     name: Backend Gradle Tests
@@ -68,8 +70,7 @@ jobs:
           tags: 
             ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:${{ github.sha }},
             ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:latest,
-            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:${{ steps.versioning.outputs.version }}
-
+            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:${{ needs.next-version-autoincrement.outputs.version }}
   build-and-push-frontend:
     name: build tagged docker version
     runs-on: ubuntu-latest
@@ -92,7 +93,7 @@ jobs:
           tags: 
             ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:${{ github.sha }},
             ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:latest,
-            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:{{ steps.versioning.outputs.version }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:{{ needs.next-version-autoincrement.outputs.version }}
 
   restart-server-docker:
     name: Restart server docker compose
