--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,21 +5,26 @@ on:
 
 jobs:
   next-version-autoincrement:
-    name: Auto Version Increase
+    name: Auto Version Increase & create new Release
     runs-on: ubuntu-latest
     steps:
-      - name: Auto Increment Semver Action
-        uses: MCKanpolat/auto-semver-action@1.0.5
-        id: versioning
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.1
         with:
-          releaseType: patch 
-          incrementPerCommit: false
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Next Release Number
-        run: echo ${{ steps.versioning.outputs.version }}
+        run: echo ${{ steps.tag_version.outputs.new_tag }}
+
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.tag_version.outputs.changelog }}
     outputs:
-      version: ${{ steps.versioning.outputs.version }}
+      tag: ${{ steps.tag_version.outputs.new_tag }}
 
   test-backend-gradleTests:
     name: Backend Gradle Tests
@@ -49,7 +54,7 @@ jobs:
         run: ./gradlew test
   
   build-and-push-backend:
-    name: build tagged docker version
+    name: build tagged docker version BE
     runs-on: ubuntu-latest
     needs: [test-backend-gradleTests, next-version-autoincrement]
     steps:
@@ -70,9 +75,9 @@ jobs:
           tags: 
             ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:${{ github.sha }},
             ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:latest,
-            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:${{ needs.next-version-autoincrement.outputs.version }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-backend:${{ needs.next-version-autoincrement.outputs.tag }}
   build-and-push-frontend:
-    name: build tagged docker version
+    name: build tagged docker version FE
     runs-on: ubuntu-latest
     needs: [next-version-autoincrement]
     steps:
@@ -93,7 +98,7 @@ jobs:
           tags: 
             ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:${{ github.sha }},
             ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:latest,
-            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:${{ needs.next-version-autoincrement.outputs.version }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/docker-m347-frontend:${{ needs.next-version-autoincrement.outputs.tag }}
 
   restart-server-docker:
     name: Restart server docker compose
