--- a/yaml/all.yaml
+++ b/yaml/all.yaml
@@ -56,7 +56,7 @@ items:
           io.kompose.service: backend
       spec:
         containers:
-        - image: asuzas/docker-m347-backend:v0.0.5
+        - image: asuzas/docker-m347-backend:v0.0.6
           imagePullPolicy: Always
           name: backend
           ports:
@@ -123,7 +123,7 @@ items:
           io.kompose.service: frontend
       spec:
         containers:
-        - image: asuzas/docker-m347-frontend:v0.0.5
+        - image: asuzas/docker-m347-frontend:v0.0.6
           imagePullPolicy: Always
           name: frontend
           ports:
@@ -196,6 +196,13 @@ items:
           ports:
           - containerPort: 5432
           resources: {}
+          env:
+          - name: POSTGRES_DB
+            value: postgres
+          - name: POSTGRES_PASSWORD
+            value: postgres
+          - name: POSTGRES_USER
+            value: postgres
         restartPolicy: Always
         serviceAccountName: ""
         volumes: null
