reset enpoints and ports

--- a/yaml/all.yaml
+++ b/yaml/all.yaml
@@ -64,7 +64,20 @@ items:
           resources: {}
           env:
           - name: DB_HOST
-            value: http://10.1.31.12:30101/
+            value: localhost:5432
+        - image: postgres:10-alpine
+          imagePullPolicy: Always
+          name: db
+          ports:
+          - containerPort: 5432
+          resources: {}
+          env:
+          - name: POSTGRES_DB
+            value: postgres
+          - name: POSTGRES_PASSWORD
+            value: postgres
+          - name: POSTGRES_USER
+            value: postgres
         restartPolicy: Always
         serviceAccountName: ""
         volumes: null
@@ -126,86 +139,12 @@ items:
           io.kompose.service: frontend
       spec:
         containers:
-        - image: asuzas/docker-m347-frontend:v0.0.8
+        - image: asuzas/docker-m347-frontend:v0.0.7
           imagePullPolicy: Always
           name: frontend
           ports:
           - containerPort: 80 
           resources: {}
-        restartPolicy: Always
-        serviceAccountName: ""
-        volumes: null
-  status: {}
-
-- apiVersion: v1 # db Service 101
-  kind: Service
-  metadata:
-    annotations:
-      kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.prod.yml --out k8s-kompose.yaml
-      kompose.image-pull-policy: Always
-      kompose.service.nodeport.port: "30101"
-      kompose.service.type: NodePort
-      kompose.version: 1.28.0 (c4137012e)
-    creationTimestamp: null
-    labels:
-      io.kompose.service: db
-    name: db
-  spec:
-    type: NodePort
-    ports:
-      - name: "5432"
-        nodePort: 30101
-        port: 5432
-        targetPort: 5432
-    selector:
-      io.kompose.service: backend
-  status:
-    loadBalancer: {}
-- apiVersion: apps/v1 # db Deployment
-  kind: Deployment
-  metadata:
-    annotations:
-      kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.prod.yml --out k8s-kompose.yaml
-      kompose.image-pull-policy: Always
-      kompose.service.nodeport.port: "30101"
-      kompose.service.type: NodePort
-      kompose.version: 1.28.0 (c4137012e)
-    creationTimestamp: null
-    labels:
-      io.kompose.service: db
-    name: db
-  spec:
-    replicas: 1
-    selector:
-      matchLabels:
-        io.kompose.service: db
-    strategy: {}
-    template:
-      metadata:
-        annotations:
-          kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.prod.yml --out k8s-kompose.yaml
-          kompose.image-pull-policy: Always
-          kompose.service.nodeport.port: "30101"
-          kompose.service.type: NodePort
-          kompose.version: 1.28.0 (c4137012e)
-        creationTimestamp: null
-        labels:
-          io.kompose.service: db
-      spec:
-        containers:
-        - image: postgres:10-alpine
-          imagePullPolicy: Always
-          name: db
-          ports:
-          - containerPort: 5432
-          resources: {}
-          env:
-          - name: POSTGRES_DB
-            value: postgres
-          - name: POSTGRES_PASSWORD
-            value: postgres
-          - name: POSTGRES_USER
-            value: postgres
         restartPolicy: Always
         serviceAccountName: ""
         volumes: null
