--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_BASEURL=http://10.1.31.12:30100/
+REACT_APP_BASEURL=http://localhost:8080/
 REACT_APP_LANGUAGE=de
 SKIP_PREFLIGHT_CHECK=true
